--- a/UNM07.Rmd
+++ b/UNM07.Rmd
@@ -120,14 +120,14 @@ training <- training %>%
 training$condition <- as.factor(training$condition)
 MA_training <- training[complete.cases(training$prob_response), ] %>%
   group_by(block, condition) %>%
-  summarise(mean_accuracy = mean(prob_response, na.rm = TRUE), 
+  summarise(mean_prob_response = mean(prob_response, na.rm = TRUE), 
             sd_accuracy = sd(prob_response, na.rm = TRUE)/sqrt(length(prob_response)))
 ```
 ```{r, echo=FALSE}
 ggplot(MA_training) +
-  geom_point(mapping = aes(x = block, y = mean_accuracy, color = condition)) +
-  geom_line(mapping = aes(x = block, y = mean_accuracy, color = condition)) +
-  geom_errorbar(aes(x= block, y = mean_accuracy, ymin = mean_accuracy-sd_accuracy, ymax = mean_accuracy+sd_accuracy), color = "black", width=.1,position=position_dodge(0.05)) +
+  geom_point(mapping = aes(x = block, y = mean_prob_response, color = condition)) +
+  geom_line(mapping = aes(x = block, y = mean_prob_response, color = condition)) +
+  geom_errorbar(aes(x= block, y = mean_prob_response, ymin = mean_prob_response-sd_accuracy, ymax = mean_prob_response+sd_accuracy), color = "black", width=.1,position=position_dodge(0.05)) +
   labs(title = "Mean accuracy for the 8 blocks of the training phase")
 ```
 
@@ -174,7 +174,7 @@ bay_ANOVA_resp_int <- bay_ANOVA_resp[4]/bay_ANOVA_resp[3]
 print(bay_ANOVA_resp_int)
 ```
 
-Subjects in the certain group showed higher accuracy through training than the uncertain group, reaching an asymptote of 0.85 around block 4. However, the uncertain group showed a slower increase in their accuracy that reached 0.7 in block 8. A mixed methods ANOVA confirmed a significant effect of the Block (`r apa(ANOVA_resp, effect = "block")`, `r report_BF_and_error(bay_ANOVA_resp[1])`) and  the main effect of the Condition (`r apa(ANOVA_resp, effect = "condition" )`, `r report_BF_and_error(bay_ANOVA_resp[2])`), but the interaction between them was non significant (`r apa(ANOVA_resp, effect = "block:condition")`, `r report_BF_and_error(bay_ANOVA_resp_int[1])`). Extreme evidence in favor of the alternative hypothesis was found for both main effects, but the evidence was moderate for the null hypothesis in the case of the interaction. 
+Subjects in the certain group showed higher accuracy through training than the uncertain group, reaching an asymptote of 0.85 around block 4. However, the uncertain group showed a slower increase in their accuracy that reached 0.7 in block 8. A mixed methods ANOVA confirmed a significant effect of the Block (`r apa(ANOVA_resp, effect = "block")`, `r report_BF_and_error(bay_ANOVA_resp[1])`) and  the main effect of the Condition (`r apa(ANOVA_resp, effect = "condition" )`, `r report_BF_and_error(bay_ANOVA_resp[2])`), but the interaction between them was non significant (`r apa(ANOVA_resp, effect = "condition:block")`, `r report_BF_and_error(bay_ANOVA_resp_int[1])`). Extreme evidence in favor of the alternative hypothesis was found for both main effects, but the evidence was moderate for the null hypothesis in the case of the interaction. 
 
 ```{r, include = FALSE}
 ##Main effect of Condition
@@ -220,7 +220,15 @@ print(bay_ANOVA_acc_test)
 bay_ANOVA_acc_test_int <- bay_ANOVA_acc_test[4]/bay_ANOVA_acc_test[3]
 print(bay_ANOVA_acc_test_int)
 ```
-There are no differences in accuracy due to the condition, the predictiveness or the interaction of them, and the bayesian analysis indicates moderate evidence for the null hypothesis in all cases, except for the interaction, where we observe anecdotal evidence for the alternative hypothesis (respectively, `r apa(ANOVA_acc_test, effect = "condition")`, `r report_BF_and_error(bay_ANOVA_acc_test[1])`; `r apa(ANOVA_acc_test, effect = "predictiveness")`, `r report_BF_and_error(bay_ANOVA_acc_test[2])`; `r apa(ANOVA_acc_test, effect = "condition:predictiveness")`, `r report_BF_and_error(bay_ANOVA_acc_test_int[1])`).
+
+```{r, include = FALSE}
+# Pairwise comparisons between group levels
+#interaction analysis
+acc_test_interaction <- emmeans(ANOVA_acc_test, ~ predictiveness|condition)
+pairs(acc_test_interaction, adjust = "bon")
+```
+
+There are no differences in accuracy due to the condition, the predictiveness , and the bayesian analysis indicates moderate evidence for the null hypothesis in both cases, except for the interaction, where we observe anecdotal evidence for the alternative hypothesis (respectively, `r apa(ANOVA_acc_test, effect = "condition")`, `r report_BF_and_error(bay_ANOVA_acc_test[1])`; `r apa(ANOVA_acc_test, effect = "predictiveness")`, `r report_BF_and_error(bay_ANOVA_acc_test[2])`). However, the interaction is significant and the bayesian evidence is strong (`r apa(ANOVA_acc_test, effect = "condition:predictiveness")`, `r report_BF_and_error(bay_ANOVA_acc_test_int[1])`). Bonferroni corrected pairwise comparisons indicated that there the accuracy was higher for the predictive cues in the certain condition (*T*(58) = -0.122, *p* = 0.011) but there were no differences in the uncertain condition (*T*(58) = 0.075, *p* = 0.111).
 
 ### Memory score
 ```{r, include = FALSE}
@@ -253,7 +261,13 @@ print(bay_ANOVA_mem_test)
 bay_ANOVA_mem_test_int <- bay_ANOVA_mem_test[4]/bay_ANOVA_mem_test[3]
 print(bay_ANOVA_mem_test_int)
 ```
-There are no significant differences in memory due to the condition, the predictiveness or the interaction of them, and the bayesian analysis indicates moderate evidence for the null hypothesis in all cases, except for the interaction, where we observe anecdotal evidence for the alternative hypothesis (respectively, `r apa(ANOVA_mem_test, effect = "condition")`, `r report_BF_and_error(bay_ANOVA_mem_test[1])`; `r apa(ANOVA_mem_test, effect = "predictiveness")`, `r report_BF_and_error(bay_ANOVA_mem_test[2])`; `r apa(ANOVA_mem_test, effect = "condition:predictiveness")`, `r report_BF_and_error(bay_ANOVA_mem_test_int[1])`).
+```{r, include = FALSE}
+# Pairwise comparisons between group levels
+#interaction analysis
+mem_test_interaction <- emmeans(ANOVA_mem_test, ~ predictiveness|condition)
+pairs(mem_test_interaction, adjust = "bon")
+```
+There are no significant differences in memory due to the condition or the predictiveness, and the bayesian analysis indicates moderate evidence for the null hypothesis in all cases (respectively, `r apa(ANOVA_mem_test, effect = "condition")`, `r report_BF_and_error(bay_ANOVA_mem_test[1])`; `r apa(ANOVA_mem_test, effect = "predictiveness")`, `r report_BF_and_error(bay_ANOVA_mem_test[2])`). However, the interaction is significant and the bayesian evidence is moderate (`r apa(ANOVA_acc_test, effect = "condition:predictiveness")`, `r report_BF_and_error(bay_ANOVA_acc_test_int[1])`). Bonferroni corrected pairwise comparisons indicated that there the accuracy was higher for the predictive cues in the certain condition (*T*(58) = -1.872, *p* = 0.008) but there were no differences in the uncertain condition (*T*(58) = 0.897, *p* = 0.195).
 
 ### Corrected memory score (with errors out)
 ```{r, include = FALSE}
@@ -320,7 +334,14 @@ print(bay_ANOVA_c_mem_test)
 bay_ANOVA_c_mem_test_int <- bay_ANOVA_c_mem_test[4]/bay_ANOVA_c_mem_test[3]
 print(bay_ANOVA_c_mem_test_int)
 ```
-There are no significant differences in memory due to the condition, the predictiveness or the interaction of them, and the bayesian analysis indicates anecdotal evidence for the null hypothesis for certainty, moderate null for predictiveness, and anecdotal evidence for the alternative hypothesis for the interaction (respectively, `r apa(ANOVA_c_mem_test, effect = "condition")`, `r report_BF_and_error(bay_ANOVA_c_mem_test[1])`; `r apa(ANOVA_c_mem_test, effect = "predictiveness")`, `r report_BF_and_error(bay_ANOVA_c_mem_test[2])`; `r apa(ANOVA_c_mem_test, effect = "condition:predictiveness")`, `r report_BF_and_error(bay_ANOVA_c_mem_test_int[1])`).
+```{r, include = FALSE}
+# Pairwise comparisons between group levels
+#interaction analysis
+c_mem_test_interaction <- emmeans(ANOVA_c_mem_test, ~ predictiveness|condition)
+pairs(c_mem_test_interaction, adjust = "bon")
+```
+
+There are no significant differences in memory due to the condition or the predictiveness, and the bayesian analysis indicates anecdotal evidence for the null hypothesis for certainty and moderate null for predictiveness (respectively, `r apa(ANOVA_c_mem_test, effect = "condition")`, `r report_BF_and_error(bay_ANOVA_c_mem_test[1])`; `r apa(ANOVA_c_mem_test, effect = "predictiveness")`, `r report_BF_and_error(bay_ANOVA_c_mem_test[2])`). However, the interaction was found significant and the bayesian evidence strong (`r apa(ANOVA_c_mem_test, effect = "condition:predictiveness")`, `r report_BF_and_error(bay_ANOVA_c_mem_test_int[1])`). Bonferroni corrected pairwise comparisons indicated that there the accuracy was higher for the predictive cues in the certain condition (*T*(58) = -1.206, *p* = 0.007) but there were no differences in the uncertain condition (*T*(58) = 0.651, *p* = 0.136).
 
 ## Certain only results
 ```{r, include = FALSE}
